# py-in-a-box

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: CODE_OF_CONDUCT.md
app/: DOCKERFILE  pyproject.toml
core/: DOCKERFILE  package.json
scripts/: setup.sh  stage.sh
scripts/modules/: scriptlogger.sh
server/: DOCKERFILE  entrypoint.sh
